# rme

./: Cargo.toml  README.md
src/: main.rs  response_data.rs  system_info.rs
