[package]
name = "rme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-rt = "2.8.0"
actix-web = "4.3.0"
cpu-monitor = "0.1.1"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
sys-info = "0.9.1"
sysinfo = "0.28.0"
systemstat = "0.2.3"
